syntax = "proto3";

package hello;
option java_multiple_files = true;
// package org.mdb.grpc;
// option package = "com.mdb.media.media_data_gateway_service.grpc";
option java_package="com.mdb.media.media_data_gateway_service.grpc";
// package com.mdb.media.media_data_gateway_service.grpc;
option java_outer_classname = "HelloProto";

message HelloRequest {
    string firstName = 1;
    string lastName = 2;
}
message HelloResponse {
    string greeting = 1;
}

service HelloService {
       // Unary
    rpc getHello(HelloRequest) returns (HelloResponse);
}
